validate: Only print hint if no main category is present, not an error

The requirement to have at least one main category was removed for the
specification a few months ago. It's still useful to tell people with a
hint about the risk of not including one, though.

See http://lists.freedesktop.org/archives/xdg/2011-November/012123.html

Part of https://bugs.freedesktop.org/show_bug.cgi?id=35844 (comment 6
and later)